hphp/test/zend/bad/ext/dom/tests/DOMDocumentFragment_construct_error_001.php
<?php
$fragment = new DOMDocumentFragment("root");
?>
